--- a/etc/calamares/modules/packages.conf
+++ b/etc/calamares/modules/packages.conf
@@ -222,5 +222,5 @@ operations:
     - squashfs-tools
     - mkinitcpio-archiso
     - calamares 
-    - carli-calamares-config
-    - carli-system-installation
+    - pakos-calamares-config
+    - pakos-system-installation
