--- a/etc/calamares/modules/shellprocess-carliafter.conf
+++ b/etc/calamares/modules/shellprocess-carliafter.conf
@@ -74,7 +74,7 @@ dontChroot: false
 # ignored; the slowloris command has a different timeout from the
 # other commands in the list):
 script:
-    - command: "/usr/local/bin/carli-final"
+    - command: "/usr/local/bin/pakos-final"
 
 # You can change the description of the job (as it is displayed in the
 # progress bar during installation) by defining an *i18n* key, which
@@ -88,6 +88,6 @@ script:
 #     name[nl]: "Schelpenpad"
 #     name[en_GB]: "Just a moment"
 i18n:
-     name: "Preparing your system for Carli"
+     name: "Preparing your system for PakOs"
 
 timeout: 999
