--- a/etc/calamares/modules/services-systemd.conf
+++ b/etc/calamares/modules/services-systemd.conf
@@ -24,7 +24,7 @@ services:
    - name: "vboxservice"
      mandatory: false
    - name: "bluetooth"
-     mandatory: true
+     mandatory: false
 
 timers:
    - name: "fstrim"
