--- a/etc/calamares/modules/packages.conf
+++ b/etc/calamares/modules/packages.conf
@@ -7,3 +7,7 @@ pacman:
     num_retries: 6
     disable_download_timeout: true
     needed_only: true
+
+try_remove:
+    - calamares
+    - pakos-calamares-config
