Remove Calamares icon after installation is done...

--- a/etc/calamares/modules/shellprocess-final.conf
+++ b/etc/calamares/modules/shellprocess-final.conf
@@ -11,4 +11,4 @@ script:
     #- command: "/usr/bin/initrd-generation-fix"
     - command: "/usr/local/bin/services"
     - command: "/usr/local/bin/dmcheck"
-
+    - "-rm @@ROOT@@/home/*/*/calamares.desktop"
