--- a/etc/calamares/modules/shellprocess-final.conf
+++ b/etc/calamares/modules/shellprocess-final.conf
@@ -8,7 +8,7 @@ script:
     - command: "/usr/local/bin/all-cores"
     - command: "/usr/local/bin/pakos-final"
     - command: "/usr/local/bin/skel"
-    - command: "/usr/bin/initrd-generation-fix"
+    #- command: "/usr/bin/initrd-generation-fix"
     - command: "/usr/local/bin/services"
     - command: "/usr/local/bin/dmcheck"
     - "-rm @@ROOT@@/home/*/*/calamares.desktop"
