--- a/etc/calamares/modules/fstab.conf
+++ b/etc/calamares/modules/fstab.conf
@@ -1,11 +1,10 @@
-mountOptions:
-    default: defaults,noatime
-    btrfs: defaults,noatime,noautodefrag,compress=zstd
-    btrfs_swap: defaults,noatime
+# SPDX-FileCopyrightText: no
+# SPDX-License-Identifier: CC0-1.0
 
-efiMountOptions: umask=0077
-
-ssdExtraMountOptions:
-    btrfs: ssd
-
-crypttabOptions: luks
+tmpOptions:
+    default:
+        tmpfs: false
+        options: ""
+    ssd:
+        tmpfs: true
+        options: "defaults,noatime,mode=1777"
