--- a/etc/calamares/modules/welcome.conf
+++ b/etc/calamares/modules/welcome.conf
@@ -3,22 +3,23 @@ showKnownIssuesUrl:     false
 showReleaseNotesUrl:    false
 
 requirements:
-    requiredStorage:    16.0
+    requiredStorage:    10
 
-    requiredRam:        3.0
+    requiredRam:        1.0
 
-    internetCheckUrl:   https://xerolinux.xyz
+    internetCheckUrl:   http://google.com
 
     check:
         - storage
         - ram
         - power
+        #- internet
         - root
         - screen
 
     required:
-        - ram
         - storage
+        - ram
         - root
 
 geoip:
