--- a/etc/calamares/modules/mount.conf
+++ b/etc/calamares/modules/mount.conf
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: no
+# SPDX-License-Identifier: CC0-1.0
+
+
 extraMounts:
     - device: proc
       fs: proc
@@ -7,47 +11,36 @@ extraMounts:
       mountPoint: /sys
     - device: /dev
       mountPoint: /dev
-      options: bind
+      options: [ bind ]
     - device: tmpfs
       fs: tmpfs
       mountPoint: /run
     - device: /run/udev
       mountPoint: /run/udev
-      options: bind
-
-extraMountsEfi:
+      options: [ bind ]
     - device: efivarfs
       fs: efivarfs
       mountPoint: /sys/firmware/efi/efivars
+      efi: true
 
 btrfsSubvolumes:
     - mountPoint: /
       subvolume: /@
     - mountPoint: /home
       subvolume: /@home
-    - mountPoint: /root
-      subvolume: /@root
-    - mountPoint: /srv
-      subvolume: /@srv
     - mountPoint: /var/cache
       subvolume: /@cache
-    - mountPoint: /var/tmp
-      subvolume: /@tmp
     - mountPoint: /var/log
       subvolume: /@log
 
+btrfsSwapSubvol: /@swap      
+
 mountOptions:
     - filesystem: default
-      options: [ defaults, noatime ]
+      options: [ defaults ]
     - filesystem: efi
       options: [ defaults, umask=0077 ]
     - filesystem: btrfs
-      options: [ defaults, noatime, compress=zstd, commit=120, space_cache=v2 ]
+      options: [ defaults, compress=zstd:1 ]
     - filesystem: btrfs_swap
       options: [ defaults, noatime ]
-    - filesystem: ext4
-      options: [ defaults, noatime, commit=60 ]
-    - filesystem: xfs
-      options: [ defaults, lazytime, noatime, attr2, inode64, logbsize=256k, noquota ]
-    - filesystem: f2fs
-      options: [ defaults, compress_algorithm=lz4, compress_chksum, atgc, gc_merge, lazytime ]
