--- a/etc/calamares/modules/partition.conf
+++ b/etc/calamares/modules/partition.conf
@@ -1,4 +1,11 @@
-efiSystemPartition:     "/boot/efi"
+# SPDX-FileCopyrightText: no
+# SPDX-License-Identifier: CC0-1.0
+
+efi:
+    mountPoint:         "/boot/efi"
+    recommendedSize:    300MiB
+    minimumSize:        100MiB
+    label:              "EFI"
 
 userSwapChoices:
     - none      # Create no swap, use no swap
@@ -14,6 +21,6 @@ initialPartitioningChoice: none
 
 initialSwapChoice: none
 
-defaultFileSystemType:  "xfs"
+defaultFileSystemType:  "ext4"
 
-availableFileSystemTypes:  ["xfs","btrfs","ext4"]
+availableFileSystemTypes:  ["ext4","btrfs","f2fs","jfs","reiser","xfs"]
