--- a/etc/calamares/settings.conf
+++ b/etc/calamares/settings.conf
@@ -1,40 +1,31 @@
+#Arch-Linux-GUI Calamares settings configuration file
+
+ # Configuration file for Calamares
+# Syntax is YAML 1.2
+---
+
 modules-search: [ local ]
 
 instances:
-- id: rootfs
-  module:   unpackfs
-  config:   unpackfs1.conf
-  weight:   30
-- id: vmlinuz
-  module:   unpackfs
-  config:   unpackfs2.conf
-  weight:   1
-- id: choice
-  module:   packages
-  config:   packages.conf
-  weight:   30
-- id:       before
+- id:       algmkinitcpio
   module:   shellprocess
-  config:   shellprocess-before.conf
-- id:       final
+  config:   shellprocess-alg-mkinitcpio.conf
+- id:       remove-livecd
   module:   shellprocess
-  config:   shellprocess-final.conf
-  
-sequence:
+  config:   shellprocess-remove-livecd.conf
 
+sequence:
 - show:
   - welcome
   - locale
   - keyboard
   - partition
-  - usersq
+  - users
   - summary
-
 - exec:
   - partition
   - mount
-  - unpackfs@rootfs
-  - unpackfs@vmlinuz
+  - unpackfs
   - machineid
   - fstab
   - locale
@@ -42,32 +33,29 @@ sequence:
   - localecfg
   - luksbootkeyfile
   - luksopenswaphookcfg
+  - shellprocess@algmkinitcpio
   - initcpiocfg
   - initcpio
   - removeuser
-  - usersq
+  - users
+  - displaymanager
   - networkcfg
   - hwclock
   - services-systemd
-  - shellprocess@before
-  - packages@choice
-  - displaymanager
+  - packages
   - grubcfg
+  - shellprocess@remove-livecd
   - bootloader
-  - shellprocess@final
-  - preservefiles
   - umount
-
 - show:
-  - finishedq
+  - finished
 
-branding: PAKOS
 
-prompt-install: true
+branding: TTH-LINUX
+
+prompt-install: false
 
 dont-chroot: false
-
-oem-setup: false
 
 disable-cancel: false
 
