--- a/etc/calamares/modules/unpackfs.conf
+++ b/etc/calamares/modules/unpackfs.conf
@@ -1,15 +1,15 @@
+# SPDX-FileCopyrightText: no
+# SPDX-License-Identifier: CC0-1.0
+#
+# Unsquash / unpack a filesystem. Multiple sources are supported, and
+# they may be squashed or plain filesystems.
+#
+
+
 unpack:
     -   source: "/run/archiso/bootmnt/arch/x86_64/airootfs.sfs"
         sourcefs: "squashfs"
         destination: ""
-        options:
-            - "-f"  # Force the unpack process for faster execution
-            - "-p"  # Parallel execution where supported
-            - "-r"  # Reduce filesystem checks for speed (if applicable)
-
     -   source: "/run/archiso/bootmnt/arch/boot/x86_64/vmlinuz-linux"
         sourcefs: "file"
         destination: "/boot/vmlinuz-linux"
-        options:
-            - "-f"  # Force execution
-            - "-p"  # Parallel unpacking
