--- a/etc/calamares/settings.conf
+++ b/etc/calamares/settings.conf
@@ -7,9 +7,9 @@
 modules-search: [ local ]
 
 instances:
-- id:       algmkinitcpio
+- id:       archpkmkinitcpio
   module:   shellprocess
-  config:   shellprocess-alg-mkinitcpio.conf
+  config:   shellprocess-ArchPK-mkinitcpio.conf
 - id:       remove-livecd
   module:   shellprocess
   config:   shellprocess-remove-livecd.conf
@@ -51,7 +51,7 @@ sequence:
   - finished
 
 
-branding: TTH-LINUX
+branding: ArchPK
 
 prompt-install: false
 
