--- a/etc/calamares/settings.conf
+++ b/etc/calamares/settings.conf
@@ -7,7 +7,7 @@
 modules-search: [ local ]
 
 instances:
-- id:       archpkmkinitcpio
+- id:       ArchPKmkinitcpio
   module:   shellprocess
   config:   shellprocess-ArchPK-mkinitcpio.conf
 - id:       remove-livecd
@@ -33,7 +33,7 @@ sequence:
   - localecfg
   - luksbootkeyfile
   - luksopenswaphookcfg
-  - shellprocess@algmkinitcpio
+  - shellprocess@ArchPKmkinitcpio
   - initcpiocfg
   - initcpio
   - removeuser
