--- a/etc/calamares/modules/packages.conf
+++ b/etc/calamares/modules/packages.conf
@@ -29,7 +29,7 @@ operations:
     - squashfs-tools
     - linux-atm
     - livecd-sounds
-    - alg-theme-cala-config
+    - PakOs-calamares-config
     - mkinitcpio-archiso
     - arch-install-scripts
     - ckbcomp
