--- a/etc/calamares/modules/shellprocess-remove-livecd.conf
+++ b/etc/calamares/modules/shellprocess-remove-livecd.conf
@@ -10,4 +10,4 @@ dontChroot: false
 timeout: 100
 script:
     - command: "/usr/local/bin/ArchPK-finalisation"
-    - command: "/usr/local/bin/cleanup_welcome_app"
+    #- command: "/usr/local/bin/cleanup_welcome_app"
